# oddBox

./: CMakeLists.txt  oddBox.c  oddBox.sublime-project
data_generator/: data_generator.c  data_generator.h
file_writer/: file_writer.c  file_writer.h
